--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,3 +28,14 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  fonts:
+    - family: BigShouldersInline
+      fonts:
+        - asset: assets/fonts/BigShouldersInline_18pt-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/BigShouldersInline_36pt-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/BigShouldersInline_18pt-Black.ttf
+          weight: 900
+
