--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,22 @@ dependencies:
   firebase_auth: ^5.4.1
   firebase_core : ^3.6.0
   cloud_firestore: ^5.6.5
-  flutter_bloc: ^8.1.3
-  equatable: ^2.0.5
-  get_it: ^7.6.7
-  dio: ^5.4.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/ico/ic_launcher.png"
+  adaptive_icon_background: "assets/ico/ic_launcher_background.png"
+  adaptive_icon_foreground: "assets/ico/ic_launcher_foreground.png"
+  remove_alpha_ios: true
 
 flutter:
 
