Done designing the Ui on the SplashUI.dart and added ImageUtils.dart and updated👌

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ flutter:
 
   uses-material-design: true
 
+
+  assets:
+    - assets/ico/
+    - assets/fonts/
+    - assets/images/
+
   fonts:
     - family: BigShouldersInline
       fonts:
