--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.6.5
   provider: ^6.0.0
+  fluttertoast: ^8.2.8
+  sn_progress_dialog: ^1.1.4
 
 dev_dependencies:
   flutter_test:
