--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^6.0.0
   fluttertoast: ^8.2.8
   sn_progress_dialog: ^1.1.4
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
