--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   fluttertoast: ^8.2.8
   sn_progress_dialog: ^1.1.4
   shared_preferences: ^2.3.2
+  flutter_speed_dial: ^4.3.0
 
 dev_dependencies:
   flutter_test:
