--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_speed_dial: ^4.3.0
   excel: ^2.0.6
   path_provider: ^2.0.11
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
