--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   excel: ^2.0.6
   path_provider: ^2.0.11
   permission_handler: ^10.2.0
+  mailer: ^6.2.0
 
 dev_dependencies:
   flutter_test:
